# donkey

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/api_reference/: mkdocs.yml  pyproject.toml
docs/api_reference/api_reference/: index.md
docs/api_reference/api_reference/_static/css/: style.css
docs/api_reference/api_reference/embeddings/: huggingface.md  watsonx.md
docs/api_reference/api_reference/evaluation/: context_similarity.md
docs/api_reference/api_reference/guardrails/: watsonx.md
docs/api_reference/api_reference/llms/: litellm.md  watsonx.md
docs/api_reference/api_reference/loaders/: directory.md  docling.md  file.md  ibm_cos.md  watson_discovery.md
docs/api_reference/api_reference/observability/: watsonx.md
docs/api_reference/api_reference/prompts/: prompt_template.md
docs/api_reference/api_reference/retrievers/: watson_discovery.md
docs/api_reference/api_reference/text_chunkers/: semantic.md  sentence.md  token.md
docs/api_reference/api_reference/vector_stores/: chroma.md  elasticsearch.md
docs/api_reference/api_reference/workflows/: benchmark_report.md  overview.md  run_server.md
docs/api_reference/api_reference/workflows/prebuilt/: document_ingestion.md
donkey-core/: README.md  pyproject.toml
donkey-core/donkey/core/: __init__.py  components.py
donkey-core/donkey/core/document/: __init__.py  base.py
donkey-core/donkey/core/embeddings/: __init__.py  base.py
donkey-core/donkey/core/evaluation/: __init__.py  base.py  context_similarity.py
donkey-core/donkey/core/guardrails/: __init__.py  base.py  schemas.py
donkey-core/donkey/core/instrumentation/events/: llm.py  loader.py  retrieval.py  text_chunker.py
donkey-core/donkey/core/llms/: __init__.py  base.py  schemas.py
donkey-core/donkey/core/loaders/: __init__.py  base.py  directory.py
donkey-core/donkey/core/prompts/: __init__.py  base.py
donkey-core/donkey/core/retrievers/: __init__.py  base.py
donkey-core/donkey/core/text_chunkers/: __init__.py  base.py  semantic.py  sentence.py  token.py
donkey-core/donkey/core/tools/: __init__.py  base.py
donkey-core/donkey/core/vector_stores/: __init__.py  base.py
donkey-instrumentation/: README.md  pyproject.toml
donkey-instrumentation/donkey_instrumentation/: __init__.py  base.py  dispatcher.py  mixin.py
donkey-instrumentation/donkey_instrumentation/events/: __init__.py  base.py
donkey-instrumentation/donkey_instrumentation/observability/: __init__.py  base.py  debug.py
donkey-instrumentation/donkey_instrumentation/span/: __init__.py
donkey-instrumentation/tests/: test_dispatcher.py  test_global_handler.py  test_manager.py  test_propagation.py  test_shutdown.py  test_simple_span_handler.py  test_unified_handler.py
donkey-integrations/embeddings/huggingface/: README.md  pyproject.toml
donkey-integrations/embeddings/huggingface/donkey/embeddings/huggingface/: __init__.py  base.py
donkey-integrations/embeddings/watsonx/: README.md  pyproject.toml
donkey-integrations/embeddings/watsonx/donkey/embeddings/watsonx/: __init__.py  base.py
donkey-integrations/guardrails/watsonx/: README.md  pyproject.toml
donkey-integrations/guardrails/watsonx/donkey/guardrails/watsonx/: __init__.py  base.py
donkey-integrations/llms/litellm/: README.md  pyproject.toml
donkey-integrations/llms/litellm/donkey/llms/litellm/: __init__.py  base.py
donkey-integrations/llms/watsonx/: README.md  pyproject.toml
donkey-integrations/llms/watsonx/donkey/llms/watsonx/: __init__.py  base.py
donkey-integrations/loaders/docling/: README.md  pyproject.toml
donkey-integrations/loaders/docling/donkey/loaders/docling/: __init__.py  base.py
donkey-integrations/loaders/file/: README.md  pyproject.toml
donkey-integrations/loaders/file/donkey/loaders/file/: __init__.py  docx.py  html.py  json.py  pdf.py
donkey-integrations/loaders/ibm_cos/: README.md  pyproject.toml
donkey-integrations/loaders/ibm_cos/donkey/loaders/ibm_cos/: __init__.py  base.py
donkey-integrations/loaders/watson_discovery/: README.md  pyproject.toml
donkey-integrations/loaders/watson_discovery/donkey/loaders/watson_discovery/: __init__.py  base.py
donkey-integrations/observability/watsonx/: README.md  pyproject.toml
donkey-integrations/observability/watsonx/donkey/observability/watsonx/: __init__.py  base.py  client.py  schemas.py
donkey-integrations/observability/watsonx/donkey/observability/watsonx/supporting_classes/: clients.py  custom_metrics.py  data_sets.py
donkey-integrations/retrievers/watson_discovery/: README.md  pyproject.toml
donkey-integrations/retrievers/watson_discovery/donkey/retrievers/watson_discovery/: __init__.py  base.py
donkey-integrations/vector_stores/chroma/: README.md  pyproject.toml
donkey-integrations/vector_stores/chroma/donkey/vector_stores/chroma/: __init__.py  base.py
donkey-integrations/vector_stores/elasticsearch/: README.md  pyproject.toml
donkey-integrations/vector_stores/elasticsearch/donkey/vector_stores/elasticsearch/: __init__.py  base.py
donkey-toolkit/: README.md  pyproject.toml
donkey-toolkit/donkey_toolkit/: __init__.py  validation.py
donkey-toolkit/donkey_toolkit/http/: __init__.py  base.py
donkey-toolkit/donkey_toolkit/http/authenticators/: __init__.py  basic_authenticator.py  ibm_iam_authenticator.py  no_auth_authenticator.py  oauth2_authenticator.py
donkey-toolkit/donkey_toolkit/retry/: __init__.py  decorator.py  strategies.py
donkey-toolkit/tests/http/: conftest.py  test_authenticators.py  test_http_service.py  test_security.py
donkey-toolkit/tests/retry/: test_retry.py
