[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donkey-instrumentation"
version = "0.1.0"
description = "Provides the instrumentation hooks for observability in Donkey."
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["AI", "LLM", "QA", "RAG", "data", "observability", "retrieval", "semantic-search"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.13.4,<3.0.0",
    "wrapt>=2.2.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "ruff>=0.15.20,<0.16.0",
]

[project.urls]
Repository = "https://github.com/donkey-project/donkey/tree/main/donkey-instrumentation"

[tool.hatch.build.targets.sdist]
include = ["donkey_instrumentation/"]

[tool.hatch.build.targets.wheel]
include = ["donkey_instrumentation/"]
