[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donkey-llms-watsonx"
version = "0.1.0"
description = "donkey llms watsonx integration"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ibm-watsonx-ai>=1.5.5,<1.6.0",
    "donkey-core>=0.1.0,<0.2.0",
]

[tool.hatch.build.targets.sdist]
include = ["donkey/"]

[tool.hatch.build.targets.wheel]
include = ["donkey/"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "ruff>=0.15.20,<0.16.0",
]
