[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donkey-loaders-file"
version = "0.1.0"
description = "donkey loaders file integration"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4>=4.15.0,<5.0.0",
    "pypdf>=6.14.2,<7.0.0",
    "jq>=1.11.0,<2.0.0",
    "docx2txt>=0.9,<1.0.0",
    "donkey-core>=0.1.0,<0.2.0",
]

[tool.hatch.build.targets.sdist]
include = ["donkey/"]

[tool.hatch.build.targets.wheel]
include = ["donkey/"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "ruff>=0.15.20,<0.16.0",
]
